[gd_scene load_steps=6 format=3 uid="uid://vu7rv1824jfg"]

[ext_resource type="Script" uid="uid://c3ca7ynedm1wt" path="res://Navigation/scene_redirector.gd" id="1_ni7ld"]
[ext_resource type="Script" uid="uid://dkfpqjhm8dtd4" path="res://Navigation/level_lock.gd" id="2_q7rdg"]

[sub_resource type="LabelSettings" id="LabelSettings_hx585"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_ni7ld"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_q7rdg"]
font_size = 32

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ni7ld")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.483
anchor_right = 0.517
anchor_bottom = 0.035
offset_left = -0.416016
offset_top = 85.0
offset_right = 0.415955
offset_bottom = 85.32
grow_horizontal = 2
text = "Select a Level"
label_settings = SubResource("LabelSettings_hx585")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -77.0
offset_right = 116.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
script = ExtResource("2_q7rdg")
level_num = 1

[node name="Label" type="Label" parent="VBox/HBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -33.5
offset_right = 25.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_ni7ld")

[node name="Button2" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
script = ExtResource("2_q7rdg")
level_num = 2

[node name="Label" type="Label" parent="VBox/HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -33.5
offset_right = 25.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = SubResource("LabelSettings_ni7ld")

[node name="Button3" type="Button" parent="VBox/HBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
script = ExtResource("2_q7rdg")
level_num = 3

[node name="Label" type="Label" parent="VBox/HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -33.5
offset_right = 25.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_ni7ld")

[node name="HBoxContainer2" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1

[node name="Button4" type="Button" parent="VBox/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
script = ExtResource("2_q7rdg")
level_num = 4

[node name="Label" type="Label" parent="VBox/HBoxContainer2/Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -33.5
offset_right = 25.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "4"
label_settings = SubResource("LabelSettings_ni7ld")

[node name="Button5" type="Button" parent="VBox/HBoxContainer2"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
script = ExtResource("2_q7rdg")
level_num = 5

[node name="Label" type="Label" parent="VBox/HBoxContainer2/Button5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -33.5
offset_right = 25.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
text = "5"
label_settings = SubResource("LabelSettings_ni7ld")

[node name="TitleButton" type="Button" parent="."]
custom_minimum_size = Vector2(150, 62.5)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -216.0
offset_top = -109.0
offset_right = -116.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="TitleButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Title"
label_settings = SubResource("LabelSettings_q7rdg")

[connection signal="pressed" from="VBox/HBoxContainer/Button" to="." method="_to_level" binds= [1]]
[connection signal="pressed" from="VBox/HBoxContainer/Button2" to="." method="_to_level" binds= [2]]
[connection signal="pressed" from="VBox/HBoxContainer/Button3" to="." method="_to_level" binds= [3]]
[connection signal="pressed" from="VBox/HBoxContainer2/Button4" to="." method="_to_level" binds= [4]]
[connection signal="pressed" from="VBox/HBoxContainer2/Button5" to="." method="_to_level" binds= [5]]
[connection signal="pressed" from="TitleButton" to="." method="_to_title"]
