[gd_scene load_steps=4 format=3 uid="uid://gct2ttl1x15w"]

[ext_resource type="Script" uid="uid://c3ca7ynedm1wt" path="res://Navigation/scene_redirector.gd" id="1_yi8iy"]

[sub_resource type="LabelSettings" id="LabelSettings_8bpl4"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_yi8iy"]
font_size = 32

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yi8iy")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 89.0
offset_top = 66.0
offset_right = 177.0
offset_bottom = 89.0
text = "In the Loop"
label_settings = SubResource("LabelSettings_8bpl4")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 92.0
offset_top = -190.0
offset_right = 405.0
offset_bottom = -81.0
grow_vertical = 0

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Play"
label_settings = SubResource("LabelSettings_yi8iy")

[connection signal="pressed" from="Button" to="." method="_to_select"]
